<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">JaywayRobot</string>

    <!-- Keys -->
    <string name="left_arrow">\u21b6</string>
    <string name="up_arrow">\u2191</string>
    <string name="right_arrow">\u21b7</string>
    <string name="delete">\u2190</string>
    <string name="play">\u25b6</string>

    <!-- Status strings -->
    <string name="halting_position_of_robot">Robot position: %s</string>
    <string name="unknown_position">unknown</string>

    <!-- String related to the charsets used for the digits -->
    <string name="pref_languages_title">Language</string>
    <string name="pref_languages_summary">Robot is speaking %s</string>
    <string name="pref_languages_dialog_title">Select what language the robot should speak</string>
    <string name="pref_languages_key">pref_languages_key</string>
    <string name="english">English</string>
    <string name="swedish">Swedish</string>
    <string name="arrows">Arrows</string>

    <string-array name="list_of_languages">
        <item>@string/english</item>
        <item>@string/swedish</item>
        <item>@string/arrows</item>
    </string-array>

    <!-- String related to the shape of rooms -->
    <string name="pref_room_shape_title">Room shape</string>
    <string name="pref_room_shape_summary">Current room shape %s</string>
    <string name="pref_room_shape_dialog_title">Select what shape the room should have</string>
    <string name="pref_room_shape_key">pref_room_shape_key</string>
    <string name="rectangular">Rectangular</string>
    <string name="circular">Circular</string>

    <string-array name="list_of_room_shapes">
        <item>@string/rectangular</item>
        <item>@string/circular</item>
    </string-array>

    <!-- Settings for a room -->
    <string name="pref_room_width_title">Room width/radius</string>
    <string name="pref_room_width_message">Set the width/radius of the room?</string>
    <string name="pref_room_width_summary">Current room width/radius: %s</string>
    <string name="pref_room_width_key">pref_room_width_key</string>
    <string name="pref_room_width_dialog_title">Width!</string>
    <string name="pref_room_length_title">Room length</string>
    <string name="pref_room_length_message">Set the length of the room?</string>
    <string name="pref_room_length_summary">Current room length: %s</string>
    <string name="pref_room_length_key">pref_room_length_key</string>
    <string name="pref_room_length_dialog_title">Length!</string>

    <!-- Start position settings -->
    <string name="pref_start_X_title">Robot start position X</string>
    <string name="pref_start_X_message">Where should the robot start?</string>
    <string name="pref_start_X_summary">Current start X: %s</string>
    <string name="pref_start_X_key">pref_startX_key</string>
    <string name="pref_start_X_dialog_title">X!</string>
    <string name="pref_start_Y_title">Robot start position Y</string>
    <string name="pref_start_Y_message">Where should the robot start?</string>
    <string name="pref_start_Y_summary">Current start Y: %s</string>
    <string name="pref_start_Y_key">pref_startY_key</string>
    <string name="pref_start_Y_dialog_title">Y!</string>
    <string name="default_room_width">5</string>
    <string name="default_room_length">5</string>
    <string name="default_start_X">2</string>
    <string name="default_start_Y">2</string>

    <!-- Menu actions -->
    <string name="action_settings">Settings</string>
    <string name="action_clear_program">Clear program</string>

</resources>